<resources>
    <string name="app_name">E-Bank</string>
    <string name="profile_icon">profile_icon</string>
    <string name="welcome">Welcome</string>
    <string name="current_balance">Current balance</string>
    <string name="view_all_customers">View all customers</string>
    <string name="profile_image">Profile_Image</string>
    <string name="balance">Balance</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="last_transactions">Last transactions</string>
    <string name="to">To</string>
    <string name="amount">Amount</string>
    <string name="confirm">Confirm</string>
    <string name="transaction_amount_hint">Transaction amount</string>
    <string name="transfer_to_selected">Transfer to selected</string>
</resources>